--- a/stack-eks.yml
+++ b/stack-eks.yml
@@ -98,6 +98,14 @@ Parameters:
     Type: Number
     Description: Node volume size
     Default: 20
+  SSHLocation:
+    Description: ' The IP address range that can be used to SSH to the EC2 instances'
+    Type: String
+    MinLength: '9'
+    MaxLength: '18'
+    Default: 0.0.0.0/0
+    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
+    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 
 Resources:
   EKSRole:
@@ -352,6 +360,39 @@ Resources:
         - !Ref Subnet02
         - !Ref Subnet03
 
+  BastionInstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      Path: "/"
+      Roles:
+      - !Ref BastionInstanceRole
+  BastionInstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - ec2.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      Path: "/"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AdministratorAccess
+
+  BastionSecurityGroup:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      VpcId: !Ref VPC
+      GroupDescription: Enable SSH access via port 22
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '22'
+          ToPort: '22'
+          CidrIp: !Ref SSHLocation
+
   BastionInstance:
     Type: 'AWS::EC2::Instance'
     DependsOn: EKSNodegroup
@@ -359,16 +400,21 @@ Resources:
       ImageId: ami-374db956
       InstanceType: t2.nano
       SecurityGroupIds:
-        - !Ref NodeSecurityGroup
-      SubnetId: !Ref Subnet01
+        - !Ref BastionSecurityGroup
+      SubnetId: !Ref SubnetId
       KeyName: !Ref KeyName
+      IamInstanceProfile: !Ref BastionInstanceProfile
       UserData: !Base64
         'Fn::Join':
           - ''
           - - |
               #!/bin/bash
             - |
-              sudo yum update -y
+              sudo yum install wget jq
+            - |
+              sudo yum -y update aws-cli
+            - |
+              aws eks --region ap-northeast-1 update-kubeconfig --name eks-dev-cluster
 
 Outputs:
   SubnetIds:
