--- a/stack-eks.yml
+++ b/stack-eks.yml
@@ -260,6 +260,7 @@ Resources:
         - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
         - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
+        - arn:aws:iam::aws:policy/AdministratorAccess
       RoleName: eksNodeInstanceRole
 
   NodeSecurityGroup:
@@ -366,24 +367,7 @@ Resources:
     Properties:
       Path: "/"
       Roles:
-      - !Ref BastionInstanceRole
-
-  BastionInstanceRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-        - Effect: Allow
-          Principal:
-            Service:
-            - ec2.amazonaws.com
-          Action:
-          - sts:AssumeRole
-      Path: "/"
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AdministratorAccess
-      RoleName: EKSBastionInstanceRole
+      - !Ref NodeInstanceRole
 
   BastionSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
